--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,12 @@ language: python
 python:
   - "2.7"
 
-before_install:
+install:
   - pip install --upgrade pip
   - pip install codecov pytest-cov
 
-install:
-  - pip install .
-
 script:
-  - coverage run tests.py
+  - pyb run_unit_tests
 
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash) -s target/reports/coverage
