--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 
 install:
   - pip install --upgrade pip
-  - pip install codecov pytest-cov
+  - pip install pybuilder
 
 script:
   - pyb run_unit_tests
