--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ language: python
 python:
   - "2.7"
 
-install:
+before_install:
   - pip install pybuilder
+
+install:
+ - pyb install_dependencies
 
 script:
   - pyb run_unit_tests
