Added unit test

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
 - pip install pybuilder
 install:
 - pyb -v install_dependencies publish
+script:
+- pyb -v run_unit_tests
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 deploy:
